# ocaml-monadise

./: README.md  dune-project  flake.nix  monadise-lwt.opam  monadise.opam
.github/: renovate.json5
.github/workflows/: ci.yaml
lib/: dune  monadise.ml  monadise_lwt.ml
test/: bench_utils.ml  dune  test_identity.ml  test_monadise.ml  test_option.ml
